[gd_scene load_steps=6 format=2]

[ext_resource path="res://UserInterface/Overlay.gd" type="Script" id=1]
[ext_resource path="res://UserInterface/TownHud/TownHud.tscn" type="PackedScene" id=2]
[ext_resource path="res://UserInterface/EventHud/EventHud.tscn" type="PackedScene" id=3]
[ext_resource path="res://UserInterface/PlayerHud/PlayerHud.tscn" type="PackedScene" id=4]
[ext_resource path="res://UserInterface/ExpeditionUI/ExpeditionUI.tscn" type="PackedScene" id=5]

[node name="Overlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TownHud" parent="." instance=ExtResource( 2 )]
visible = false

[node name="EventHud" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PlayerHud" parent="." instance=ExtResource( 4 )]

[node name="ExpeditionUI" parent="." instance=ExtResource( 5 )]
visible = false
